ajouter une image dan un table

--- a/branchOsamaSyllabus.HTML
+++ b/branchOsamaSyllabus.HTML
@@ -6,8 +6,7 @@
     <table>
         <tr>
           <td> <h3> ISTQB certification </h3> </td>
-          <!--<td> <img src="ISTQB Certified Tester.jpg" alt="ISTQB"></td>-->
-          <td></td><P>
+          <td><P>
             1.5 La psychologie des tests
 Le développement de logiciels, y compris les tests logiciels, implique des êtres humains. Par conséquent, la psychologie humaine a des effets importants sur les tests logiciels.
 1.5.1 Psychologie humaine et test
@@ -21,6 +20,9 @@ Les testeurs et les Test Managers doivent avoir de bonnes compétences interpers
  Confirmer que l'autre personne a compris ce qui a été dit et vice versa.
 Les objectifs habituels des tests ont été discutés plus tôt (voir section 1.1). Définir clairement le bon ensemble d'objectifs de test a d'importantes implications psychologiques. La plupart des gens ont tendance à aligner leurs plans et leurs comportements avec les objectifs fixés par l'équipe, la direction et les autres parties prenantes.
             </P></td>
+          <td> <img src="photoTestOsama.avif" width="400" 
+            height="500" ></td>
+          <td>    </td>
         </tr>
       </table>
     
