--- a/syllabus.html
+++ b/syllabus.html
@@ -1,1 +1,6 @@
-
+<h1> Résumé de la page 26 du groupe par Franck</h1>
+</br>
+<p>Le résumé de la page 26 est ici. On  parle ici de psychologie humaine et de l'impact des tests sur le facteur humain.
+   
+</br>Comment apporter l'erreur et dialoguer entre développeur-testeur.
+</p>
